<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>net.modelbased</groupId>
	<artifactId>net.modelbased.mediation</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<packaging>pom</packaging>

	<name>SINTEF Mediation Environment</name>
	<description>
    Mediation Environment, provided by SINTEF. This work is supported by the EU projects
    EMPOWER, ENVISION and REMICS.
  </description>
	<inceptionYear>2012</inceptionYear>


	<developers>
		<developer>
			<id>seb</id>
			<name>Sebastien Mosser</name>
			<email>sebastien.mosser@sintef.no</email>
			<organization>SINTEF ICT</organization>
		</developer>
		<developer>
			<id>franckc</id>
			<name>Franck Chauvel</name>
			<email>franck.chauvel@sintef.no</email>
			<organization>SINTEF ICT</organization>
		</developer>
	</developers>

	<scm>
		<connection>scm:git:git@github.com:mosser/mediation-portal.git</connection>
		<url>scm:git:git@github.com:mosser/mediation-portal.git</url>
		<developerConnection>scm:git:git@github.com:mosser/mediation-portal.git</developerConnection>
	</scm>

	<ciManagement>
		<system>jenkins</system>
		<url>https://sintef.ci.cloudbees.com/job/Mediation%20Environment/</url>
	</ciManagement>

	<properties>
		<maven.compiler.source>1.6</maven.compiler.source>
		<maven.compiler.target>1.6</maven.compiler.target>
		<encoding>UTF-8</encoding>
		<scala.version>2.9.1</scala.version> <!-- MongoDB driver relies on scala 2.9.1 -->
	</properties>

	<modules>
		<module>../net.modelbased.mediation.library</module>
		<module>../net.modelbased.mediation.service</module>
		<module>../net.modelbased.mediation.portal</module>
		<module>../net.modelbased.mediation.samples</module>
	</modules>

	<licenses>
		<license>
			<name>LGPL</name>
			<url>http://www.gnu.org/licenses/lgpl-3.0.txt</url>
			<distribution>repo</distribution>
		</license>
	</licenses>

	<organization>
		<name>SINTEF ICT / MOD team</name>
		<url>http://modelbased.net</url>
	</organization>

	<repositories>
		<repository>
			<id>SINTEF-snapshots</id>
			<name>snapshots</name>
			<url>https://repository-sintef.forge.cloudbees.com/snapshot/</url>
		</repository>
		<repository>
			<id>spray</id>
			<name>Spray Repository</name>
			<url>http://repo.spray.cc/</url>
		</repository>
		<repository>
			<id>Akka</id>
			<name>Akka Repository</name>
			<url>http://repo.akka.io/releases/</url>
		</repository>
	</repositories>

	<dependencies>
		<dependency>
			<groupId>org.scala-lang</groupId>
			<artifactId>scala-library</artifactId>
			<version>${scala.version}</version>
		</dependency>
		<dependency>
			<groupId>org.specs2</groupId>
			<artifactId>specs2_${scala.version}</artifactId>
			<version>1.10</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.specs2</groupId>
			<artifactId>specs2-scalaz-core_${scala.version}</artifactId>
			<version>6.0.1</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.10</version>
			<scope>test</scope>
		</dependency>
	</dependencies>

	<build>
		<sourceDirectory>src/main/scala</sourceDirectory>
		<testSourceDirectory>src/test/scala</testSourceDirectory>
		<plugins>
			<!-- Licence headers -->
			<plugin>
				<inherited>true</inherited>
				<groupId>com.mycila.maven-license-plugin</groupId>
				<artifactId>maven-license-plugin</artifactId>
				<version>1.9.0</version>
				<configuration>
					<strictCheck>true</strictCheck>
					<header>${project.basedir}/../LICENSE_HEADER.txt</header>
					<failIfMissing>true</failIfMissing>
					<aggregate>true</aggregate>
					<properties>
						<projectname>SensApp</projectname>
						<projecturl>http://sensapp.modelbased.net</projecturl>
						<organization>SINTEF ICT</organization>
						<owner>Franck Chauvel</owner>
						<year>${project.inceptionYear}</year>
						<email>franck.chauvel@sintef.no</email>
						<artid>${project.artifactId}</artid>
					</properties>
					<mapping>
						<scala>JAVADOC_STYLE</scala>
						<conf>SCRIPT_STYLE</conf>
					</mapping>
					<excludes>
						<exclude>.gitignore</exclude>
						<exclude>.cache</exclude>
						<exclude>**/site.xml</exclude>
						<exclude>*.log</exclude>
						<exclude>*.srt</exclude>
						<exclude>*.csv</exclude>
						<exclude>*.txt</exclude>
						<exclude>*.json</exclude>
						<exclude>.idea/**</exclude>
						<exclude>**/src/main/resources/logback.xml</exclude>
						<exclude>**/src/test/resources/**</exclude>
						<exclude>**/src/test/data/**</exclude>
					</excludes>
				</configuration>
				<executions>
					<execution>
						<id>check-headers</id>
						<phase>verify</phase>
						<goals>
							<goal>check</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
			<!-- Scala Compilation -->
			<plugin>
				<groupId>net.alchim31.maven</groupId>
				<artifactId>scala-maven-plugin</artifactId>
				<version>3.0.1</version>
				<executions>
					<execution>
						<goals>
							<goal>compile</goal>
							<goal>testCompile</goal>
						</goals>
						<configuration>
							<args>
								<arg>-deprecation</arg>
								<arg>-dependencyfile</arg>
								<arg>${project.build.directory}/.scala_dependencies</arg>
							</args>
						</configuration>
					</execution>
				</executions>
			</plugin>
			<!-- Scala Tests -->
			<plugin>
				<artifactId>maven-failsafe-plugin</artifactId>
				<version>2.6</version>
				<executions>
					<execution>
						<goals>
							<goal>integration-test</goal>
							<goal>verify</goal>
						</goals>
					</execution>
				</executions>
				<configuration>
					<useFile>false</useFile>
				</configuration>
			</plugin>
			<!-- Maven Site plugin, including the extension for Markdown syntax -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-site-plugin</artifactId>
				<version>3.1</version>
				<dependencies>
					<dependency>
						<groupId>org.apache.maven.doxia</groupId>
						<artifactId>doxia-module-markdown</artifactId>
						<version>1.3</version>
					</dependency>
				</dependencies>
				<configuration>
					<inherited>false</inherited>
					<siteDirectory>${project.basedir}/src/site</siteDirectory>
					<inputEncoding>UTF-8</inputEncoding>
					<outputEncoding>UTF-8</outputEncoding>
					<reportPlugins>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-project-info-reports-plugin</artifactId>
							<version>2.4</version>
							<configuration>
								<dependencyDetailsEnabled>false</dependencyDetailsEnabled>
								<dependencyLocationsEnabled>false</dependencyLocationsEnabled>
								<argLine>-Xmx1024m -XX:MaxPermSize=512m</argLine>
								<aggregate>true</aggregate>
							</configuration>
							<reports>
								<report>index</report>
								<report>project-team</report>
								<report>license</report>
								<report>mailing-list</report>
								<report>dependencies</report>
								<report>dependency-convergence</report>
								<report>plugin-management</report>
								<report>cim</report>
								<!-- <report>issue-tracking</report> -->
								<report>scm</report>
								<report>summary</report>
							</reports>
						</plugin>
						<plugin>
							<groupId>org.scala-tools</groupId>
							<artifactId>maven-scala-plugin</artifactId>
							<version>2.15.2</version>
							<configuration>
								<aggregate>true</aggregate>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-surefire-report-plugin</artifactId>
							<version>2.12</version>
							<configuration>
								<aggregate>true</aggregate>
							</configuration>
						</plugin>
						<plugin>
							<groupId>org.apache.maven.plugins</groupId>
							<artifactId>maven-jxr-plugin</artifactId>
							<version>2.3</version>
							<configuration>
								<aggregate>true</aggregate>
							</configuration>
						</plugin>
					</reportPlugins>
				</configuration>
			</plugin>

			<!-- Maven Release plugin -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-release-plugin</artifactId>
				<version>2.2.2</version>
			</plugin>
		</plugins>

		<pluginManagement>
			<plugins>
				<plugin>
					<groupId>org.apache.maven.plugins</groupId>
					<artifactId>maven-site-plugin</artifactId>
					<configuration>
						<siteDirectory>../net.modelbased.mediation/src/site</siteDirectory>
						<outputDirectory>../net.modelbased.mediation/target/site/${project.artifactId}</outputDirectory>
					</configuration>
				</plugin>
			</plugins>
		</pluginManagement>

	</build>




</project>
